Сделал аккордеон-кнопку

--- a/src/pug/sections/_main-news.pug
+++ b/src/pug/sections/_main-news.pug
@@ -2,7 +2,7 @@ main.main
     .student-news
         .student-news__container.container
             .student-news__header
-                h2.student-news__title Студенческие новости
+                h2.student-news__title.title--large Студенческие новости
                 span.student-news__counter 54
             .student-news__content
                 .student-news__wrapper
