--- a/src/pug/sections/_science-work.pug
+++ b/src/pug/sections/_science-work.pug
@@ -57,25 +57,24 @@ mixin table
                 td.table-scroll__cell: a(href="#") Открыть
 
 section.activity-work
-    .activity-work__header
-        h2.activity-work__title Научная работа
-        span.divider
-        .activity-work__progress
-            .progress
-                .progress-bar(data-progress='45')
-            .progress-info
-    .activity-work__container
-        .activity-work__section.accordeon-section
-            p.activity-work__section-title.accordeon-title Научные публикации
-                span.activity-work__section-count 4
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
-
-    .activity-work__container.activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Участие в выполнении НИОКР
-                span.activity-work__section-count 2
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
+    .activity-work__container.container
+        .activity-work__header
+            h2.activity-work__title.title--s Научная работа
+            span.divider
+            .activity-work__progress
+                .progress
+                    .progress-bar(data-progress='45')
+                .progress-info
+        .activity-work__wrapper
+            .activity-work__section.accordeon-section
+                p.activity-work__section-title.accordeon-title Научные публикации
+                    span.activity-work__section-count 4
+                    button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Участие в выполнении НИОКР
+                    span.activity-work__section-count 2
+                    button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
