--- a/src/pug/sections/_services.pug
+++ b/src/pug/sections/_services.pug
@@ -1,19 +1,20 @@
 section.services
-    .services__header
-        h2.services__title.title--main Популярные услуги
-        span.divider
-    .services__container.swiper-container
-        .services__wrapper.swiper-wrapper
-            .service.swiper-slide
-                h3.service__name Справка об обучении
-                p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
-                h3.service__name Справка об обучении
-                p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
-                h3.service__name Справка об обучении
-                p.service__deadline Срок готовности 3 дня
-        .services__navigation
-            .swiper-button-prev
-            .services__pagination.swiper-pagination
-            .swiper-button-next
+    .services__container.container
+        .services__header
+            h2.services__title.title--main Популярные услуги
+            span.divider
+        .services__slider.swiper-container
+            .services__wrapper.swiper-wrapper
+                .service.swiper-slide
+                    h3.service__name Справка об обучении
+                    p.service__deadline Срок готовности 3 дня
+                .service.swiper-slide
+                    h3.service__name Справка об обучении
+                    p.service__deadline Срок готовности 3 дня
+                .service.swiper-slide
+                    h3.service__name Справка об обучении
+                    p.service__deadline Срок готовности 3 дня
+            .services__navigation
+                .swiper-button-prev
+                .services__pagination.swiper-pagination
+                .swiper-button-next
