--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -1,6 +1,7 @@
 $c-light: #ffffff;
 $c-black: #444444;
 $c-title: #6E7781;
+$c-blue: #3464e0;
 $c-blue-background: linear-gradient(90deg, #3464e0 0%, #2955c9 100%);
 $c-blue: rgba(52, 100, 224, 1);
 $c-link: #9cbaf0;
