--- a/src/pug/sections/_international-work.pug
+++ b/src/pug/sections/_international-work.pug
@@ -57,25 +57,25 @@ mixin table
                 td.table-scroll__cell: a(href="#") Открыть
 
 section.activity-work
-    .activity-work__header
-        h2.activity-work__title Международная деятельность
-        span.divider
-        .activity-work__progress
-            .progress
-                .progress-bar(data-progress='16')
-            .progress-info
-    .activity-work__container
-        .activity-work__section.accordeon-section
-            p.activity-work__section-title.accordeon-title Владение иностранными языками
-                span.activity-work__section-count 1
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
+    .activity-work__container.container
+        .activity-work__header
+            h2.activity-work__title.title--s Международная деятельность
+            span.divider
+            .activity-work__progress
+                .progress
+                    .progress-bar(data-progress='16')
+                .progress-info
+        .activity-work__wrapper
+            .activity-work__section.accordeon-section
+                p.activity-work__section-title.accordeon-title Владение иностранными языками
+                    span.activity-work__section-count 1
+                    button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
 
-    .activity-work__container.activity-work__container
-        .activity-work__section
-            p.activity-work__section-title.accordeon-title Участие в международных образовательных программам вне основных профессиональных образовательных программ
-                span.activity-work__section-count 1
-            button.activity-work__section-button.accordeon-button
-            .activity-work__table-container.accordeon-container
-                +table
+            .activity-work__section
+                p.activity-work__section-title.accordeon-title Участие в международных образовательных программам вне основных профессиональных образовательных программ
+                    span.activity-work__section-count 1
+                    button.activity-work__section-button.accordeon-button
+                .activity-work__table-container.accordeon-container
+                    +table
