--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,7 +1,7 @@
 footer.footer
     .footer__container.container
         .footer__section
-            h2.footer__section-title Контакты
+            h2.footer__section-title.title Контакты
             ul.footer__contacts-list.footer__list
                 li.footer__contacts-item г. Москва, ул. Вильгельма Пика, дом 4, <br> стр.1 корпус 2, этаж 4, кабинеты 14–15
                 li.footer__contacts-item Электронная почта:
@@ -9,7 +9,7 @@ footer.footer
                 li.footer__contacts-item Телефон:
                     a(href="tel:+74952556767").footer__contacts-link.footer__contacts-tel +7(495)255–67–67(доб. 3317, 2112, 3152)
         .footer__section
-            h2.footer__section-title График работы
+            h2.footer__section-title.title График работы
             p.footer__schedule Понедельник - Пятница: 09:00 - 18:00 <br> Суббота - Воскресенье: Выходные
             ul.footer__message-list.footer__list
                 li.footer__message-item.footer__message-item--mail
@@ -24,7 +24,7 @@ footer.footer
                         img(src="img/whatsapp.svg" alt="Написать нам в Whatsapp" width='36' height='36')
 
         .footer__section
-            h2.footer__services-title.footer__section-title Интернет ресурсы университета
+            h2.footer__services-title.footer__section-title.title Интернет ресурсы университета
             ul.footer__services-list.footer__list
                 li.footer__services-item
                     a(href="mailto:info@rgsu.net").footer__services-link Официальный сайт
