--- a/src/pug/sections/_main-vacancy.pug
+++ b/src/pug/sections/_main-vacancy.pug
@@ -76,21 +76,21 @@ section.vacancy
                                     input.filter__checkbox(type="checkbox" id="outstudy" name="outstudy")
                                     span.filter__checkbox-visible
                     .filter__faculty
-                        h4.filter__title Лаборатория
+                        h4.filter__title.title--aside Лаборатория
                         select.filter__select
                             option(selected disabled) -- выберите --
                             option(value="#") Радиотехнический
                             option(value="#") Физики и Химии
                             option(value="#") Искусств
                     .filter__education
-                        h4.filter__title Область
+                        h4.filter__title.title--aside Область
                         .filter__education-options
                             span.filter__education-option IT
                                 button.filter__education-option--delete
                             span.filter__education-option Бухгалтерия
                                 button.filter__education-option--delete
                     .filter__salary
-                        .filter__title Заработная плата
+                        h4.filter__title.title--aside Заработная плата
                         .filter__range.two-range-slider.js-two-range-slider
                             .two-range-slider__output
                                 output.two-range-slider__value.js-two-range-slider-min-value.two-range-slider__value--left
