--- a/src/pug/sections/_partners.pug
+++ b/src/pug/sections/_partners.pug
@@ -1,47 +1,47 @@
 section.partners
-    .partners__container
+    .partners__container.container
         .partners__header
-            h2.partners__title Наши партнеры
+            h2.partners__title.title--large Наши партнеры
             span.divider
-    .partners__wrapper.swiper-container
-        ul.partners__list.swiper-wrapper
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adidas.svg" alt="adidas")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adecco.svg" alt="adecco")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/hh.svg" alt="HeadHunter")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/inditex.svg" alt="Inditex")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/rosgosstrah.svg" alt="Росгосстрах")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/Adecco.svg" alt="Adecco")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adidas.svg" alt="Adidas")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adecco.svg" alt="Adecco")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/hh.svg" alt="HeadHunter")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adidas.svg" alt="Adidas")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/adidas.svg" alt="Adidas")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/hh.svg" alt="Head Hunter")
-            li.partners__item.swiper-slide
-                a.partners__link(href="#")
-                    img(src="img/rssm.svg" alt="РССМ")
-        .partners__list-pagination.swiper-pagination
+        .partners__wrapper.swiper-container
+            ul.partners__list.swiper-wrapper
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adidas.svg" alt="adidas")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adecco.svg" alt="adecco")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/hh.svg" alt="HeadHunter")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/inditex.svg" alt="Inditex")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/rosgosstrah.svg" alt="Росгосстрах")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/Adecco.svg" alt="Adecco")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adidas.svg" alt="Adidas")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adecco.svg" alt="Adecco")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/hh.svg" alt="HeadHunter")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adidas.svg" alt="Adidas")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/adidas.svg" alt="Adidas")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/hh.svg" alt="Head Hunter")
+                li.partners__item.swiper-slide
+                    a.partners__link(href="#")
+                        img(src="img/rssm.svg" alt="РССМ")
+            .partners__list-pagination.swiper-pagination
