--- a/src/pug/sections/_portfolio-tabs.pug
+++ b/src/pug/sections/_portfolio-tabs.pug
@@ -1,7 +1,7 @@
 section.portfolio-tabs
-    .portfolio-tabs__container
+    .portfolio-tabs__container.container
         .portfolio-tabs__header
-            h2.portfolio-tabs__title Портфолио по профессиям
+            h2.portfolio-tabs__title.title--large Портфолио по профессиям
             span.divider
         .portfolio-tabs__buttons
             button(data-id="college").btn.portfolio-tabs__button.portfolio-tabs__button--active Колледж
@@ -29,7 +29,7 @@ section.portfolio-tabs
                             span.portfolio__counter 27
                     li.portfolio__item
                         a.portfolio__link(href="#")
-                            span.portfolio__description Издатльское дело
+                            span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
 
