--- a/src/pug/sections/_profile.pug
+++ b/src/pug/sections/_profile.pug
@@ -28,10 +28,16 @@ section.profile
                         ul.social-block__list
                             li.social-block__item
                                 a.social-block__link(href="#") VK
+                                    svg(fill="#C3CAD6" width="18" height="10")
+                                        use(href="#vk")
                             li.social-block__item
                                 a.social-block__link.social-block__link--fb(href="#") FB
+                                    svg(fill="#C3CAD6" width="8" height="16")
+                                        use(href="#fb")
                             li.social-block__item
                                 a.social-block__link.social-block__link--insta(href="#") Instagram
+                                    svg(fill="#C3CAD6" width="16" height="16")
+                                        use(href="#insta")
                     button.btn.btn--regular.profile__contacts-data Контактные данные
                     .profile__activities.activities
                         ul.activities__list
