--- a/src/scss/blocks/_languages.scss
+++ b/src/scss/blocks/_languages.scss
@@ -24,7 +24,7 @@
       left: 0;
       top: 50%;
       transform: translateY(-50%);
-      background: url("../img/icons/icons.svg#germany");
+      background: url("../img/icons/germany.svg");
     }
   }
   &--spanish {
@@ -38,7 +38,7 @@
       left: 0;
       top: 50%;
       transform: translateY(-50%);
-      background: url("../img/icons/icons.svg#spain");
+      background: url("../img/icons/spain.svg");
     }
   }
 }
