--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,3 +67,9 @@
 
 //new-section
 @import "blocks/new-section";
+
+//children
+@import "blocks/my-children";
+
+//parent-cabinet
+@import "blocks/parent-cabinet";
