--- a/src/pug/sections/_advertisement.pug
+++ b/src/pug/sections/_advertisement.pug
@@ -1,53 +1,3 @@
 section.advertisement
-    .advertisement__container.swiper-container
-        .advertisement__header
-            h2.advertisement__titile Объявления
-            span.divider
-            .advertisement__buttons.advertisement__buttons--extra
-                .swiper-button-prev.advertisement-button-prev
-                .swiper-pagination.advertisement-pagination
-                .swiper-button-next.advertisement-button-next
-        .swiper-wrapper.advertisement__wrapper
-            // Slides
-            .swiper-slide
-                .block.block--wide
-                    .block__content.block__content--main
-                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
-                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
-                        a(href="#").slider__item-link Подробнее
-                    .block__content--aside
-                        p.slider__item-date 19
-                            span Сентября
-                        p.slider__item-state.slider__item-state--online Онлайн
-            .swiper-slide
-                .block.block--medium.block--hot
-                    .block__content.block__content--main
-                        p.slider__item-descr.slider__item-descr--medium Обновленные профессиональные стандарты в области социальной работы вступают в действие
-                        a(href="#").slider__item-link.slider__item-link--dark Подробнее
-                    .block__content--aside
-                        p.slider__item-date.slider__item-date--dark 19
-                            span Сентября
-                        p.slider__item-state.slider__item-state--offline Офлайн
-            .swiper-slide
-                .block.block--narrow
-                    .block__content.block__content--main
-                        p.slider__item-descr.slider__item-descr--narrow Магистр экономических наук из Ярославской области стал Лауреатом – победителем Всероссийского конкурса
-                        a(href="#").slider__item-link.slider__item-link--dark Подробнее
-                    .block__content--aside
-                        p.slider__item-date.slider__item-date--dark
-                            span
-                        p.slider__item-state
-            .swiper-slide
-                .block.block--wide
-                    .block__content.block__content--main
-                        h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
-                        p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
-                        a(href="#").slider__item-link Подробнее
-                    .block__content--aside
-                        p.slider__item-date 19
-                            span Сентября
-                        p.slider__item-state.slider__item-state--online Онлайн
-        .advertisement__buttons
-            .swiper-button-prev.advertisement-button-prev
-            .swiper-pagination.advertisement-pagination
-            .swiper-button-next.advertisement-button-next
+    .advertisement__container.container
+        include ./_advertisement-content
