--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -10,7 +10,7 @@ section.news
         .news__wrapper.swiper-wrapper
             .news__item.swiper-slide
                 .block.block--wide.block__content-news
-                    a(href="#").block__content
+                    a(href="new-layout.html").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
                         picture.news__picture
@@ -18,7 +18,7 @@ section.news
                             img(src="img/studyear.png")
             .news__item.swiper-slide
                 .block.block--wide.block--attention.block__content-news
-                    a(href="#").block__content
+                    a(href="new-layout.html").block__content.block__content--hot
                         p.news__item-date.news__item-date--dark 28 августа
                         h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
                         picture.news__picture
@@ -26,15 +26,15 @@ section.news
                             img(src="img/studyspring.png")
             .news__item.swiper-slide
                 .block.block--wide.block__content-news
-                    a(href="#").block__content
+                    a(href="new-layout.html").block__content
                         p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом новоstudyspringго учебного года
+                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
                         picture.news__picture
                             source(srcset="img/studyear.webp" type="image/webp")
                             img(src="img/studyear.png")
             .news__item.swiper-slide
                 .block.block--wide.block__content-news
-                    a(href="#").block__content
+                    a(href="new-layout.html").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
                         picture.news__picture
@@ -42,7 +42,7 @@ section.news
                             img(src="img/studyspring.png")
             .news__item.swiper-slide
                 .block.block--wide.block__content-news
-                    a(href="#").block__content
+                    a(href="new-layout.html").block__content
                         p.news__item-date 1 сентября
                         h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
                         picture.news__picture
