--- a/src/pug/sections/_portfolio--middle-score.pug
+++ b/src/pug/sections/_portfolio--middle-score.pug
@@ -1,6 +1,6 @@
 section.portfolio
     .portfolio__container.card--stack
-        h2.portfolio__title Средний балл
+        h2.portfolio__title.title Средний балл
         .portfolio__wrapper
             .portfolio__progress.gauge.gauge--score(data-width="236" data-value="3.59")
                 span.gauge__value
