--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -1,6 +1,6 @@
 section.portfolio
     .portfolio__container.card--stack
-        h2.portfolio__title Цифровой профиль
+        h2.portfolio__title.title Цифровой профиль
         .portfolio__wrapper
             .portfolio__progress.gauge(data-width="236" data-value="75")
                 span.gauge__value
