--- a/src/pug/sections/_similar-profiles.pug
+++ b/src/pug/sections/_similar-profiles.pug
@@ -3,15 +3,42 @@ section.portfolio-cards.similar-profiles
         .portfolio-cards__header
             h2.portfolio-cards__title.title--large Похожие профили
         .similar-profiles__wrapper
-            +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75')
-                li.achievement.achievement--handshake Достижение: Рукопожатие
-                li.achievement.achievement--cup Достижение: Кубок
-            +portfolio-card('card-avatar-2.webp', 'card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '15')
-                li.achievement.achievement--cup Достижение: Кубок
-            +portfolio-card('card-avatar-3.webp', 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85')
-                li.achievement.achievement--art Достижение: Искусство
-                li.achievement.achievement--cup Достижение: Кубок
-            +portfolio-card('card-avatar-4.webp', 'card-avatar-4.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '23', '3', '100')
-                li.achievement.achievement--handshake Достижение: Рукопожатие
-                li.achievement.achievement--art Достижение: Искусство
-                li.achievement.achievement--notebook Достижение: Книжка
+            a(href="digital-profile.html")
+                +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
+                    ul.achievements__list
+                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#handshake")
+                        li.achievement.achievement--cup Достижение: Кубок
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#trophy" )
+
+            a(href="digital-profile.html")
+                +portfolio-card('card-avatar-2.webp', 'card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '15',  'digital-profile.html')
+                    ul.achievements__list
+                        li.achievement.achievement--cup Достижение: Кубок
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#trophy")
+
+            a(href="digital-profile.html")
+                +portfolio-card('card-avatar-3.webp', 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85',  'digital-profile.html')
+                    ul.achievements__list
+                        li.achievement.achievement--paint-palette Достижение: Искусство
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#paint-palette")
+                        li.achievement.achievement--cup Достижение: Кубок
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#trophy")
+
+            a(href="digital-profile.html")
+                +portfolio-card('card-avatar-4.webp', 'card-avatar-4.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '23', '3', '100',  'digital-profile.html')
+                    ul.achievements__list
+                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#handshake")
+                        li.achievement.achievement--paint-palette Достижение: Искусство
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#paint-palette")
+                        li.achievement.achievement--notebook Достижение: Книжка
+                            svg.achievement-icon(width="18" height="18")
+                                use(href="#notebook")
