--- a/src/scss/blocks/_accordeon.scss
+++ b/src/scss/blocks/_accordeon.scss
@@ -1,7 +1,10 @@
 .accordeon-container {
   display: none;
   width: 100%;
-  height: 440px;
+  min-height: 440px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
   animation: toHeight 0.2s reverse;
   .accordeon-section--active & {
     display: block;
@@ -13,10 +16,14 @@
   align-items: center;
   display: flex;
   width: 100%;
+  padding: 17px 0 17px 20px;
 }
 
 .accordeon-section {
   margin-bottom: 32px;
+  position: relative;
+  background-color: #fff;
+  border-radius: 4px;
 }
 
 @keyframes toHeight {
