--- a/src/scss/blocks/_pagination.scss
+++ b/src/scss/blocks/_pagination.scss
@@ -26,38 +26,50 @@
   font-size: 16px;
   line-height: 14px;
   color: #C3CAD6;
-  position: relative;
   padding: 9px 12px;
   border-radius: 2px;
   &--back {
     color: #c3cad6;
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      width: 14px;
-      height: 14px;
-      left: -26px;
-      background: url("../img/icons/icons.svg#back") no-repeat center;
+    position: relative;
+    svg {
+      top: 50%;
+      transform: translateY(-50%);
+      left: -11px;
+      fill: $c-darkgrey;
+    }
+    &:hover {
+      svg {
+        fill: $c-blue;
+      }
     }
   }
   &--forward {
     color: #c3cad6;
-    &::after {
-      position: absolute;
-      content: "";
-      display: block;
-      width: 14px;
-      height: 14px;
+    position: relative;
+    svg {
+      transform: translateY(-50%) rotate(180deg) ;
       top: 50%;
-      right: -26px;
-      background: url("../img/icons/icons.svg#back") no-repeat center;
-      transform: rotate(180deg) translateY(50%);
+      right: -11px;
+      fill: $c-darkgrey;
+    }
+    &:hover {
+      svg {
+        fill: $c-blue;
+      }
     }
   }
   &--active {
     color: $c-light;
   }
+  &:hover {
+    color: $c-blue;
+  }
+}
+
+.pagination__link--icon {
+  position: absolute;
+  width: 7px;
+  height: 14px;
 }
 
 .pagination__list {
@@ -77,6 +89,9 @@
   }
   &:last-child {
     margin-right: 0;
+  }
+  &:hover {
+    border-color: $c-blue;
   }
 }
 
