--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -20,7 +20,7 @@ body {
   font-style: normal;
   font-weight: 300;
   color: #444444;
-  background: $c-grey;
+  background: #f8fafe;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
